# travel_agency_backend_django

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
k8s/: deployment.yaml  pv.yaml  pvc.yaml
src/migrations/: 0003_report_alter_applicationtour_options_and_more.py  0004_alter_report_options_alter_report_file_and_more.py
src/views/: application_views.py
