[tool.poetry]
name = "travel-agency"
version = "0.1.0"
description = ""
authors = ["nariman079 <nariman079i@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
postgres = "^4.0"
celery = "^5.4.0"
telebot = "^0.0.5"
pandas = "^3.0.2"
pillow = "^12.2.0"
uvicorn = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
